Fix safety regression test compatibility