@@ -1,8 +1,43 @@
 package ch.pfvr.internapp;
-import static org.junit.Assert.*;
-import java.nio.charset.StandardCharsets;import java.nio.file.*;import org.junit.Test;
+
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+
+import org.junit.Test;
+
 public class OpusSafetyRegressionTest {
- private static String source() throws Exception {String r="src/main/java/ch/pfvr/internapp/MainActivity.java";Path[] c={Paths.get(r),Paths.get("app",r),Paths.get("Android","app",r)};for(Path p:c)if(Files.isRegularFile(p))return Files.readString(p,StandardCharsets.UTF_8);throw new IllegalStateException();}
- @Test public void currentNavigationRequiresFreshData() throws Exception {String s=source();assertTrue(s.contains("fromCurrentBaselGaugeCm"));assertTrue(s.contains("dd.MM. HH:mm"));assertTrue(s.contains("riverLevelColor(HydroStation station"));}
- @Test public void webFlowsAreHardened() throws Exception {String s=source();assertTrue(s.contains("AppLinkPolicy.mayOpenExternally(uri.getScheme())"));assertFalse(s.contains("window.__pfvrBaseInternalUrl="));}
+    private static String source() throws Exception {
+        String relative = "src/main/java/ch/pfvr/internapp/MainActivity.java";
+        Path[] candidates = {
+                Paths.get(relative),
+                Paths.get("app", relative),
+                Paths.get("Android", "app", relative)
+        };
+        for (Path candidate : candidates) {
+            if (Files.isRegularFile(candidate)) {
+                return new String(Files.readAllBytes(candidate), StandardCharsets.UTF_8);
+            }
+        }
+        throw new IllegalStateException("MainActivity.java not found");
+    }
+
+    @Test
+    public void currentNavigationRequiresFreshData() throws Exception {
+        String source = source();
+        assertTrue(source.contains("fromCurrentBaselGaugeCm"));
+        assertTrue(source.contains("dd.MM. HH:mm"));
+        assertTrue(source.contains("riverLevelColor(HydroStation station"));
+    }
+
+    @Test
+    public void webFlowsAreHardened() throws Exception {
+        String source = source();
+        assertTrue(source.contains("AppLinkPolicy.mayOpenExternally(uri.getScheme())"));
+        assertFalse(source.contains("window.__pfvrBaseInternalUrl="));
+    }
 }
